Fix: Update root element ID and asset paths for proper rendering

--- a/index.html
+++ b/index.html
@@ -2,19 +2,20 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>redbez clone</title>
-    <link rel="icon" type="image/png" href="/public/rodbez logo.png" sizes="192x192" width="256" />
+    <link rel="icon" type="image/png" href="/rodbez logo.png" sizes="192x192" width="256" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta charset="utf-8" />
-    <meta content="width=device-width, initial-scale=1" name="viewport" />
+    <meta name="theme-color" content="#000000" />
+    <meta name="description" content="RedBez Clone - A modern ride-sharing platform" />
+    <title>redbez clone</title>
+    <base href="/" />
     <style>
       @import url("https://fonts.googleapis.com/css?family=Rubik:var(--omnifood-dev-rubik-medium-font-weight),var(--omnifood-dev-rubik-regular-font-weight),var(--omnifood-dev-semantic-heading-3-font-weight),400,600|Inter:500,600|Bigshot+One:400");
     </style>
-    <link href="tailwind.css" rel="stylesheet" />
-    <link href="tailwind.css" rel="stylesheet" />
+    <link href="/tailwind.css" rel="stylesheet" />
   </head>
   <body>
-    <div id="app"></div>
-    <script type="module" src="./src/index.tsx"></script>
+    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <div id="root"></div>
+    <script type="module" src="/src/index.tsx"></script>
   </body>
 </html>
